Fix: Updated POM